config-and-policy/namespaces/abstract/names/names.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: names
  labels:
    k8s-namespace: names
